clang/test/BSC/Negative/Trait/r3/type_cast_trait/type_cast_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait TR1{
  void f1(This* this);
};

void int::f1(int* this) {}

_Impl _Trait TR1 for int;

void baz(_Trait TR1* tr) {
  tr->f1();
}

int main() {
  int y = 41;
  baz(y); // expected-error {{expected a pointer type which has implemented '_Trait TR1', found 'int'}}
  baz((_Trait TR1)&y); // expected-error {{used type '_Trait TR1' where arithmetic or pointer type is required}}

  _Trait TR1* tr1 = (_Trait TR1*)&y;
  baz(*tr1); // expected-error {{indirection requires pointer operand ('_Trait TR1 *' invalid)}}

  ((_Trait TR1)&y)->f1(); // expected-error {{used type '_Trait TR1' where arithmetic or pointer type is required}}
  return 0;
}